Update build.ps1